# yivo

./: .gitignore  CMakeLists.txt  pyproject.toml  readme.md
.github/workflows/: cpp.yaml  python.yaml
archive/yivo/: yivo.h
arduino/arduino-quadcopter-sensors-2/: arduino-quadcopter-sensors-2.ino
arduino/arduino-quadcopter-sensors-3/: arduino-quadcopter-sensors-3.ino  sensor.hpp
arduino/lsm6ds_lps22/: lsm6ds_lps22.ino
arduino/lsm6ds_lps22-2/: AHRS_FusionInterface.h  AHRS_Madgwick.cpp  AHRS_Madgwick.h  cli.sh  lsm6ds_lps22-2.ino
c/: CMakeLists.txt  format-code.sh  readme.md
c++/: CMakeLists.txt  readme.md
c++/examples/: main.cpp  save.cpp
c++/gtests/: CMakeLists.txt
c++/src/: yivo.hpp
c/examples/: CMakeLists.txt  crc.c  main.c  multi.c  simple.c
c/extlibs/: scruffy
c/scruffy/: CMakeLists.txt  main-gtest.cpp  test.c
c/src/: parser.c  yivopkt.c
c/src/yivo/: parser.h  yivo.h  yivopkt.h
cpp/: CMakeLists.txt  library.properties  readme.md
cpp/examples/: CMakeLists.txt  array_alt.cpp  crc.cpp  main.cpp  save.cpp
cpp/examples/arduino/simple/: simple.ino
cpp/gtests/: CMakeLists.txt  main-gtest.cpp  msgs-gtest.cpp
cpp/src/: crc.hpp  packet.cpp  parser.hpp  pose.cpp  utils.hpp  yivo.hpp  yivopack.hpp  yivopkt.hpp
cpp/src/yivo/: yivo.hpp
dev/: misc.cpp
dev/func_overload/: func.py
dev/generator/: yivo_gen.py
dev/generator/templates/: msg.cpp.jinja
dev/generator2/: dev.ipynb  msg_parts.py  readme.md
dev/generator2/msgs/: 8_test_t.yml  vec.yml
dev/generator2/templates/: msg.cpp.jinja
dev/generator3/: dev.ipynb  proto-dev.ipynb  readme.md
dev/generator3/python/: format.py  msg_parts.py  test.py  tokenize.py  yivo-gen.py
dev/generator3/python/msgs/: drone.proto  geometry_msgs.proto  test.proto  test2.proto
dev/generator3/python/templates/: base.py.jinja  msg.h.jinja  msg.py.jinja
dev/test/cpp/: base.hpp  cal_t.hpp  imu_t.hpp  quat_t.hpp  vec_t.hpp
dev/test/python/: base.py
examples/: CMakeLists.txt  main.cpp
gtests/: CMakeLists.txt  msgs-gtest.cpp
python/: pyproject.toml  readme.md
python/archive/: sensors.py
python/dev/arduino/: arduino-read.py  data.pickle  read-data.ipynb
python/examples/: drone.proto  files.json  test.py
python/examples/c/: drone.c  drone.h
python/examples/python/: __init__.py  drone.py
python/tests/: test_gen.py  test_yivo.py
python/tests/messages/: quat.yivo
python/yivo/: __init__.py  files.py  imu.py  packet.py  parser.py  sensors.py  serialport.py
python/yivo/generator/: format.py  yivo_gen.py
python/yivo/generator/templates/: base.py.jinja  msg.py.jinja
src/: imu.cpp  packet.cpp  pt.cpp  seriallib.cpp  twist.cpp  wrench.cpp  yivo.cpp
src/yivo/: yivo.h
tests/: test_yivo.py
yivo/: __init__.py  packet.py  parser.py
